--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <hr>
 
   <a href="public/movie-ranking.html">  <h3>Movie Ranking Project</h3></a>
-  <img src="assets/images/Screenshot 2025-01-29 at 4.55.43 PM.png" width="300"/>
+  <img src="assets/images/movie.png" width="300"/>
 
   <a href="public/birthday-invite.html"> <h3>Birthday Invite Project</h3></a>
-  <img src="assets/images/Screenshot 2025-01-29 at 4.56.25 PM.png" width="300"/>
+  <img src="assets/images/birthday-invite.png" width="300"/>
   <hr>
 <a href="public/contact.html">Contact Me</a>
 <a href="public/about.html">About Me</a>
